@startuml YouPorts_Class_Diagram

skinparam backgroundColor #000000
skinparam classBackgroundColor #0a0a0a
skinparam classBorderColor #7c3aed
skinparam classArrowColor #a78bfa
skinparam classFontColor #ffffff
skinparam classAttributeFontColor #e2e8f0
skinparam classStereotypeFontColor #06b6d4
skinparam shadowing false
skinparam roundcorner 8
skinparam linetype ortho

title <color:#a78bfa>YouPorts</color> — Class Diagram

' ─────────────────────────────────────────
'  USER HIERARCHY
' ─────────────────────────────────────────

abstract class User {
    + id : int
    + first_name : string
    + last_name : string
    + email : string
    + password : string <<hidden>>
    + role : enum {ADMIN, STUDENT, TEACHER, BDE}
    + remember_token : string <<hidden>>
    + created_at : datetime
    + updated_at : datetime
}

class Student {
    + dashboard() : JsonResponse
    + myReports() : JsonResponse
    + createReportForm() : JsonResponse
    + storeReport(Request) : JsonResponse
}

class Teacher {
    + dashboard() : JsonResponse
    + reports() : JsonResponse
    + users() : JsonResponse
    + resolve(report_id) : JsonResponse
    + reject(report_id, reason) : JsonResponse
}

class BDE {
    + dashboard() : JsonResponse
    + reports() : JsonResponse
    + approve(id, meeting_date, notes) : JsonResponse
    + deny(id, reason) : JsonResponse
}

class Admin {
    + index() : JsonResponse
    + reports() : JsonResponse
    + meetings() : JsonResponse
    + requestMeetings() : JsonResponse
    + createUser(data) : JsonResponse
}

User <|-- Student
User <|-- Teacher
User <|-- BDE
User <|-- Admin

' ─────────────────────────────────────────
'  CORE DOMAIN
' ─────────────────────────────────────────

class Category {
    + id : int
    + name : string
    + description : string
    + created_at : datetime
    + updated_at : datetime
    --
    + index() : JsonResponse
    + store(Request) : JsonResponse
    + update(id, Request) : JsonResponse
    + destroy(id) : JsonResponse
}

class Report {
    + id : int
    + title : string
    + description : string
    + student_id : int <<FK>>
    + category_id : int <<FK>>
    + generated_report_id : int <<FK>>
    + status : enum {pending, resolved, rejected}
    + created_at : datetime
    + updated_at : datetime
    --
    + student() : BelongsTo
    + category() : BelongsTo
    + generatedReport() : BelongsTo
}

class GeneratedReport {
    + id : int
    + message : string
    + priority : enum {P0, P1, P2, P3}
    + status : enum {pending, resolved, rejected, escalated}
    + reports_count : int
    + bde_reason : string
    + created_at : datetime
    + updated_at : datetime
    --
    + reports() : HasMany
    + requestMeeting() : HasOne
    + bde() : BelongsTo
    --
    <<business rule>>
    + escalatePriority(count) : string
    ' 1 report  → P3
    ' 2 reports → P2
    ' 3 reports → P1
    ' 4+ reports → P0
}

class RejectTeacherReason {
    + id : int
    + message : string
    + teacher_id : int <<FK>>
    + generated_report_id : int <<FK>>
    + created_at : datetime
    + updated_at : datetime
    --
    + teacher() : BelongsTo
    + generatedReport() : BelongsTo
}

' ─────────────────────────────────────────
'  MEETING FLOW
' ─────────────────────────────────────────

class RequestMeeting {
    + id : int
    + bde_id : int <<FK>>
    + generated_report_id : int <<FK>>
    + meeting_date : datetime
    + notes : string
    + meeting_link : string
    + status : enum {pending, approved, rejected}
    + rejection_reason : string
    + created_at : datetime
    + updated_at : datetime
    --
    + bde() : BelongsTo
    + generatedReport() : BelongsTo
    + meeting() : HasOne
}

class Meeting {
    + id : int
    + title : string
    + description : string
    + date : datetime
    + link : string
    + pdf_path : string
    + admin_id : int <<FK>>
    + request_meeting_id : int <<FK>>
    + created_at : datetime
    + updated_at : datetime
    --
    + admin() : BelongsTo
    + requestMeeting() : BelongsTo
}

' ─────────────────────────────────────────
'  SERVICES
' ─────────────────────────────────────────

class OpenAIPdfReportService {
    - apiKey : string
    - apiUrl : string
    --
    + generatePdfReport(Meeting, RequestMeeting) : string
    - generateAiContent(Meeting, RequestMeeting) : string
    - buildPrompt(Meeting, RequestMeeting) : string
    - fallbackContent(Meeting, RequestMeeting) : string
    - buildHtml(Meeting, RequestMeeting, content) : string
}

class MeetingScheduledMail {
    + meeting : Meeting
    + requestMeeting : RequestMeeting
    --
    + envelope() : Envelope
    + content() : Content
}

' ─────────────────────────────────────────
'  RELATIONSHIPS
' ─────────────────────────────────────────

Student "1" --> "0..*" Report : submits >
Category "1" --> "0..*" Report : classifies >
Report "0..*" --> "1" GeneratedReport : grouped into >
GeneratedReport "1" --> "0..1" RequestMeeting : escalated via >
Teacher "1" --> "0..*" RejectTeacherReason : writes >
RejectTeacherReason "0..*" --> "1" GeneratedReport : references >
BDE "1" --> "0..*" RequestMeeting : creates >
RequestMeeting "1" --> "0..1" Meeting : results in >
Admin "1" --> "0..*" Meeting : schedules >
Meeting "1" ..> OpenAIPdfReportService : uses >
Meeting "1" ..> MeetingScheduledMail : triggers >

@enduml
